add_executable(kscreenlocker_test kscreenlocker_main.cpp)
target_link_libraries(kscreenlocker_test KScreenLocker Qt5::Widgets KF5::I18n)
ecm_mark_as_test(kscreenlocker_test)

add_definitions(-DQML_PATH="${CMAKE_CURRENT_SOURCE_DIR}/powermanagement.qml")
add_executable(powermanagement_test powermanagementtest.cpp ../powermanagement.cpp)
target_link_libraries(powermanagement_test Qt5::Gui Qt5::DBus Qt5::Quick)
ecm_mark_as_test(powermanagement_test)

include_directories(../kcheckpass/)
add_definitions(-DQML_FILE="${CMAKE_CURRENT_SOURCE_DIR}/kcheckpass_test.qml")
add_definitions(-DKSCREENLOCKER_TEST_APPS)
add_executable(kcheckpass_test kcheckpass_test.cpp ../greeter/authenticator.cpp)
target_link_libraries(kcheckpass_test Qt5::Gui Qt5::Quick)
ecm_mark_as_test(kcheckpass_test)
